# prax-agent

./: .gitignore  .npmignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  __init__.py  cli.py  main.py  package.json  pyproject.toml  repl.py
.github/workflows/: test.yml
.prax/: config.yaml.example
.prax/agents/: api-designer.md  architect.md  bug-hunter.md  build-error-resolver.md  code-reviewer.md  database-expert.md  dependency-manager.md  devops-engineer.md  documentation-writer.md  frontend-specialist.md  performance-optimizer.md  planner.md  security-reviewer.md  tdd-guide.md
agents/: base.py  loader.py  sisyphus.py
assets/: __init__.py
assets/claude/: __init__.py
commands/: cron.py  handlers.py  registry.py
config/: models.yaml  rules.yaml
core/: agent_loop.py  agent_message.py  claude_cli_executor.py  compaction.py  config_files.py  config_merge.py  context.py  cron_installer.py  cron_store.py  event_bus.py  governance.py  hooks.py  llm_client.py  memory_store.py  middleware.py  model_catalog.py  model_router.py  model_upgrade.py  openviking.py  permission_guard.py  persistence.py  planning.py  provider_setup.py  risk_scorer.py  runtime_env.py  session_memory.py  session_store.py  skills_loader.py  streaming_tool_executor.py  summarization.py  todo_store.py  yolo_classifier.py
core/memory/: migration.py  openviking_backend.py
core/sandbox/: __init__.py  docker.py
docs/: BENCHMARKS.md  getting-started.md
docs/assets/: architecture.d2  benchmark-results.d2  capabilities.d2  integration-paths.d2  verification-loop.d2
docs/recipes/: ai-news-daily.md  docs-audit.md  (+4 more)
integrations/: __init__.py
runtime/: __init__.py  native.py
tests/: conftest.py  test_agent_loop.py  test_commands.py  test_config_merge.py  test_main.py  test_main_full.py  test_memory.py  test_memory_middleware.py  test_openprax_claude_code.py  test_repl.py  test_skills.py  test_stream_events.py  test_tools_batch1.py
tools/: apply_patch.py  ast_grep.py  base.py  bash.py  git_tool.py  glob_tool.py  hashline_read.py  notify.py  sandbox_bash.py  task.py  tmux_bash.py  todo_write.py  verify_command.py  web_search.py  write.py
tui/: __init__.py  app.py
workflows/: ultrawork.py
(+257 files in other folders)
